// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render avatar with children 1`] = `
<div>
  <div
    class="avatarIconContainer"
    data-testid="avatar-icon"
  >
    <button
      class=""
      data-testid="avatar-icon-button"
      disabled=""
      id="avatar-icon-button"
      tabindex="-1"
      type="button"
    >
      <span>
        <div
          class=""
          data-testid="avatar-icon-avatar"
        >
          N
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`render avatar with menu 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="avatarIconContainer test-root"
    data-testid="avatar-icon"
  >
    <button
      class="test-button"
      data-testid="avatar-icon-button"
      id="avatar-icon-button"
      tabindex="0"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="test-avatar"
          data-testid="avatar-icon-avatar"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class=""
    role="alert"
  >
    <div>
      <svg
        aria-hidden="true"
        class=""
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div>
      test
    </div>
  </div>
</div>
`;
